Added a link to style.css file and place holder text for main structure of index.css page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A website about the apollo 11 mission.">
     <meta name="keywords" content="Apollo 11, Moon landing, Space race.">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Apollo 11 Mission Timeline</title>
 </head>
 <body>
-    
+    <header>title and nav elements</header>
+    <section>hero image</section>
+    <section>1st block of information</section>
+    <section>2nd block of information</section>
+    <section>3rd block of information</section>
+    <section>video relating to some of the information</section>
+    <footer> links to nasa youtube facebook and twitter </footer>
 </body>
 </html>
