--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <title>Apollo 11 Mission Timeline</title>
 </head>
 <body>
-    <header>title and nav elements</header>
+    <header>
+        <h1>Apollo 11 Mission Timeline</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Beginning</a>
+                </li>
+                <li>
+                    <a href="#">Middle</a>
+                </li>
+                <li>
+                    <a href="#">End</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>hero image</section>
     <section>1st block of information</section>
     <section>2nd block of information</section>
