Added style rules for header elements remove default margin border and padding values

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 </head>
 <body>
     <header>
-        <h1>Apollo 11 Mission Timeline</h1>
+        <h1 id="title">Apollo 11 Mission Timeline</h1>
         <nav>
-            <ul>
+            <ul id="nav">
                 <li>
-                    <a href="index.html">Beginning</a>
-                </li>
-                <li>
-                    <a href="#">Middle</a>
+                    <a href="#">Contact</a>
                 </li>
                 <li>
                     <a href="#">End</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Middle</a>
+                </li>
+                <li>
+                    <a href="index.html">Beginning</a>
                 </li>
             </ul>
         </nav>
