--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#">Middle</a>
                 </li>
                 <li>
-                    <a href="index.html">Beginning</a>
+                    <a href="index.html" class="active">Beginning</a>
                 </li>
             </ul>
         </nav>
