Added a hero image, changed some nav element style rules

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
                     <a href="#">Middle</a>
                 </li>
                 <li>
-                    <a href="index.html" class="current">Beginning</a>
+                    <a href="index.html" >Beginning</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>hero image</section>
+    <section>
+        <div id="hero-image"></div>
+    </section>
     <section>1st block of information</section>
     <section>2nd block of information</section>
     <section>3rd block of information</section>
