Added a section for information about the launch to be presented and a title to it along with some styling to the whole section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     <section>
         <div id="hero-image"></div>
     </section>
-    <section>1st block of information</section>
+    <section>
+        <div id="launch">
+            <h2>The Launch</h2>
+            <p></p>
+        </div>
+    </section>
     <section>2nd block of information</section>
     <section>3rd block of information</section>
     <section>video relating to some of the information</section>
