Add some information to the launch section and apply some style rules

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section>
         <div id="launch">
             <h2>The Launch</h2>
-            <p></p>
+            <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.</p>
         </div>
     </section>
     <section>2nd block of information</section>
