Added more information about the launch, changed some style rules for elements with launch information and changed color of a section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
     <section>
         <div id="launch">
             <h2>The Launch</h2>
-            <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.</p>
+            <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.
+                It was launched from Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
+                Armstrong, Buzz Aldrin and MIcheal Collins inside the command module.At 12:22 EDT the engines of 
+                the third stage of the saturn v ignite to lift the command module out of earth orbit sending it 
+                towards the moon.</p>
+                <img src="" alt="">
         </div>
     </section>
-    <section>2nd block of information</section>
+    <section id="test">2nd block of information</section>
     <section>3rd block of information</section>
     <section>video relating to some of the information</section>
     <footer> links to nasa youtube facebook and twitter </footer>
