Added image of the launch, positioned the text, made it larger and added a new heading

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     <section>
         <div id="hero-image"></div>
     </section>
-    <section>
-        <div id="launch">
-            <h2>The Launch</h2>
+    <section id="launch">
+        <div id="launch-info">
+            <h2>The launch</h2>
             <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.
-                It was launched from Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
+                It was launched from  the Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
                 Armstrong, Buzz Aldrin and MIcheal Collins inside the command module.At 12:22 EDT the engines of 
                 the third stage of the saturn v ignite to lift the command module out of earth orbit sending it 
                 towards the moon.</p>
-                <img src="" alt="">
         </div>
+        <div id="launch-img"> <img src="assets/images/saturn-v-flight.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
-    <section id="test">2nd block of information</section>
+    <section >2nd block of information</section>
     <section>3rd block of information</section>
     <section>video relating to some of the information</section>
     <footer> links to nasa youtube facebook and twitter </footer>
