Added image of the seperated module and some alt text describing it, some text that explains the seperation and style rules for proper positioning and element size

--- a/index.html
+++ b/index.html
@@ -40,12 +40,28 @@
                 It was launched from  the Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
                 Armstrong, Buzz Aldrin and MIcheal Collins inside the command module.At 12:22 EDT the engines of 
                 the third stage of the saturn v ignite to lift the command module out of earth orbit sending it 
-                towards the moon.</p>
+                towards the moon.
+            </p>
         </div>
         <div id="launch-img"> <img src="assets/images/saturn-v-flight.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
-    <section >2nd block of information</section>
-    <section>3rd block of information</section>
+    <section id="seperation">
+        <div id="seperation-info">
+            <h2>The seperation</h2>
+            <p>At 13:26 EDT Neil Armstrong and Buzz Aldrin entered the Eagle 
+                lunar lander and seperated from Micheal Collins who remained in
+                the command module which was orbiting the moon. After this the 
+                eagle was to descend towards the moon and land on it
+            </p>
+        </div>
+        <div id="seperation-img"><img src="assets/images/eagle-module.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
+    </section>
+    <section>
+        <div>
+            <h2>The landing</h2>
+            <p></p>
+        </div>
+    </section>
     <section>video relating to some of the information</section>
     <footer> links to nasa youtube facebook and twitter </footer>
 </body>
