Added title for the landing and some information about it

--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
     <section>
         <div>
             <h2>The landing</h2>
-            <p></p>
+            <p>When the eagle was descending towards the moon, Neil Armstrong was
+                having difficulty finding a place to land, but luckily he found a 
+                smooth place to land with just 25 seconds of fuel to spare. They 
+                landed on July 20 1969 at 4:18 p.m. EDT.</p>
         </div>
+        <div></div>
     </section>
     <section>video relating to some of the information</section>
     <footer> links to nasa youtube facebook and twitter </footer>
