Added some more information about the landing and some more style rules for positioning and size

--- a/index.html
+++ b/index.html
@@ -56,13 +56,21 @@
         </div>
         <div id="seperation-img"><img src="assets/images/eagle-module.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
-    <section>
-        <div>
+    <section id="landing">
+        <div id="landing-info">
             <h2>The landing</h2>
             <p>When the eagle was descending towards the moon, Neil Armstrong was
                 having difficulty finding a place to land, but luckily he found a 
                 smooth place to land with just 25 seconds of fuel to spare. They 
-                landed on July 20 1969 at 4:18 p.m. EDT.</p>
+                landed on July 20 1969 at 4:18 p.m. EDT.At around 10:40-10:56 p.m. 
+                EDT Neil Armstrong got out of the lunar module hatch and started 
+                going down the nine step ladder. When he was at the second step he pulled a 
+                ring that deployed a tv camera. This camera broadcasted him going down to 
+                the moons surface live to people on earth.At 10:56 p.m. Neil Armstrong takes 
+                his first step on the moon and says his 
+                famous quote "That's one small step for man, one giant leap for mankind.".
+                this moment was the first time in history a man had set foot on a celestial
+                body that was not earth.</p>
         </div>
         <div></div>
     </section>
