Add picture of moon landing, alt attribute for image and style rules to position image

--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
                 the moons surface live to people on earth.At 10:56 p.m. Neil Armstrong takes 
                 his first step on the moon and says his 
                 famous quote "That's one small step for man, one giant leap for mankind.".
-                this moment was the first time in history a man had set foot on a celestial
-                body that was not earth.</p>
+                This moment was the first time in history a man had set foot on a celestial
+                body that was not earth.
+            </p>
         </div>
-        <div></div>
+        <div id="landing-img"><img src="assets/images/moon-landing.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
     <section>video relating to some of the information</section>
     <footer> links to nasa youtube facebook and twitter </footer>
