Add section with a youtube video of the moon landing

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
         </div>
         <div id="landing-img"><img src="assets/images/moon-landing.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
-    <section>video relating to some of the information</section>
+    <section id="vid-section">
+           <div id="vid">
+            <iframe width="1024" height="567" src="https://www.youtube.com/embed/S9HdPi9Ikhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </div>
+    </section>
     <footer> links to nasa youtube facebook and twitter </footer>
 </body>
 </html>
