Add styling to footer and links to nasa's instagram, youtube channel and twitter

--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
             <iframe width="1024" height="567" src="https://www.youtube.com/embed/S9HdPi9Ikhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
-    <footer> links to nasa youtube facebook and twitter </footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.youtube.com/c/NASA" target="_blank">Link to Nasa Youtube Channel</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="https://www.instagram.com/nasa/" target="_blank">Link to Nasa Instagram</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="https://twitter.com/NASA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">Link to Nasa Twitter</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
