Added aria labels to all footer links and some more styling to footer elements

--- a/index.html
+++ b/index.html
@@ -83,17 +83,13 @@
     <footer>
         <ul>
             <li>
-                <a href="https://www.youtube.com/c/NASA" target="_blank">Link to Nasa Youtube Channel</a>
+                <a href="https://www.youtube.com/c/NASA" target="_blank" aria-label="link to nasa's youtube channel, opens in a new tab if clicked">Link to Nasa Youtube Channel</a>
             </li>
-        </ul>
-        <ul>
             <li>
-                <a href="https://www.instagram.com/nasa/" target="_blank">Link to Nasa Instagram</a>
+                <a href="https://www.instagram.com/nasa/" target="_blank" aria-label="link to nasa's instagram, opens in a new tab if clicked">Link to Nasa Instagram</a>
             </li>
-        </ul>
-        <ul>
             <li>
-                <a href="https://twitter.com/NASA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">Link to Nasa Twitter</a>
+                <a href="https://twitter.com/NASA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" aria-label="link to nasa's twitter, opens in a new tab if clicked">Link to Nasa Twitter</a>
             </li>
         </ul>
     </footer>
