Add new information and a new image to the second section added a youtube video of nixons call to the apollo 11 astronauts

--- a/middle.html
+++ b/middle.html
@@ -35,15 +35,13 @@
     </section>
     <section id="launch">
         <div id="launch-info">
-            <h2>The launch</h2>
-            <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.
-                It was launched from  the Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
-                Armstrong, Buzz Aldrin and MIcheal Collins inside the command module.At 12:22 EDT the engines of 
-                the third stage of the saturn v ignite to lift the command module out of earth orbit sending it 
-                towards the moon.
+            <h2>Nixon's call to the moon</h2>
+            <p>
+                While they were on the surface of the moon they recieved a phone call form the man who was the us president in the oval office at the time richard nixon he talked about what a proud
+                moment this was for all of humanity and especially anyone american.
             </p>
         </div>
-        <div id="launch-img"> <img src="assets/images/saturn-v-flight.jpg" alt="A picture of the saturn v mid flight"></div>
+        <div id="launch-img"> <img src="assets/images/nixon.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
     <section id="seperation">
         <div id="seperation-info">
@@ -73,11 +71,11 @@
                 body that was not earth.
             </p>
         </div>
-        <div id="landing-img"><img src="assets/images/moon-landing.jpg" alt="A picture of an astronaut on the moon"></div>
+        <div id="landing-img"><img src="assets/images/" alt="A picture of an astronaut on the moon"></div>
     </section>
     <section id="vid-section">
            <div id="vid">
-            <iframe width="1024" height="567" src="https://www.youtube.com/embed/S9HdPi9Ikhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1024" height="567" src="https://www.youtube.com/embed/VLyJ9FHDO-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
     <footer>
