Add new picture and information for section about end of the moonwalk

--- a/middle.html
+++ b/middle.html
@@ -45,14 +45,12 @@
     </section>
     <section id="seperation">
         <div id="seperation-info">
-            <h2>The seperation</h2>
-            <p>At 13:26 EDT Neil Armstrong and Buzz Aldrin entered the Eagle 
-                lunar lander and seperated from Micheal Collins who remained in
-                the command module which was orbiting the moon. After this the 
-                eagle was to descend towards the moon and land on it
+            <h2>End of the moonwalk</h2>
+            <p>
+                Neil Armstrong and Buzz Aldrin get back into the eagle and prepare to meet with the command module.
             </p>
         </div>
-        <div id="seperation-img"><img src="assets/images/eagle-module.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
+        <div id="seperation-img"><img src="assets/images/moon.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
     <section id="landing">
         <div id="landing-info">
