Add new information to presidential call section and end of moonwalk section

--- a/middle.html
+++ b/middle.html
@@ -37,7 +37,7 @@
         <div id="launch-info">
             <h2>Nixon's call to the moon</h2>
             <p>
-                While they were on the surface of the moon they recieved a phone call form the man who was the us president in the oval office at the time richard nixon he talked about what a proud
+                While they were on the surface of the moon they recieved a phone call  at 23:48 EDT from the man who was the us president in the oval office at the time Richard Nixon he talked about what a proud
                 moment this was for all of humanity and especially anyone american.
             </p>
         </div>
@@ -47,7 +47,7 @@
         <div id="seperation-info">
             <h2>End of the moonwalk</h2>
             <p>
-                Neil Armstrong and Buzz Aldrin get back into the eagle and prepare to meet with the command module.
+                Neil Armstrong and Buzz Aldrin get back into the eagle and prepare to meet with the command module at around 01:11 EDT.
             </p>
         </div>
         <div id="seperation-img"><img src="assets/images/moon.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
