--- a/middle.html
+++ b/middle.html
@@ -54,22 +54,15 @@
     </section>
     <section id="landing">
         <div id="landing-info">
-            <h2>The landing</h2>
-            <p>When the eagle was descending towards the moon, Neil Armstrong was
-                having difficulty finding a place to land, but luckily he found a 
-                smooth place to land with just 25 seconds of fuel to spare. They 
-                landed on July 20 1969 at 4:18 p.m. EDT.At around 10:40-10:56 p.m. 
-                EDT Neil Armstrong got out of the lunar module hatch and started 
-                going down the nine step ladder. When he was at the second step he pulled a 
-                ring that deployed a tv camera. This camera broadcasted him going down to 
-                the moons surface live to people on earth.At 10:56 p.m. Neil Armstrong takes 
-                his first step on the moon and says his 
-                famous quote "That's one small step for man, one giant leap for mankind.".
-                This moment was the first time in history a man had set foot on a celestial
-                body that was not earth.
+            <h2>Crew Reunited</h2>
+            <p>
+                Neil armstron and Buzz aldrin got in the lunar module ascent stage and launched up towards the command module which was in orbit of the moon.
+                They left behind the descent stage, a few experiments, cameras and the american flag which they planted on the surface of the moon. They 
+                brought with them rocks from the moon and film from their cameras. At 17:35 EDT the lunar module ascent stage docked with the command module
+                and and so began their return to earth.
             </p>
         </div>
-        <div id="landing-img"><img src="assets/images/" alt="A picture of an astronaut on the moon"></div>
+        <div id="landing-img"><img src="assets/images/eagle-launch.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
     <section id="vid-section">
            <div id="vid">
