Add end.html page for information about the missions end and links to end.html page

--- a/middle.html
+++ b/middle.html
@@ -19,7 +19,7 @@
                     <a href="#">Contact</a>
                 </li>
                 <li>
-                    <a href="#">End</a>
+                    <a href="end.html">End</a>
                 </li>
                 <li>
                     <a href="middle.html">Middle</a>
