Add image and information about the return to earth

--- a/end.html
+++ b/end.html
@@ -31,19 +31,20 @@
         </nav>
     </header>
     <section>
-        <div id="hero-image"><img src="/assets/images/command-module.jpeg" alt="picture of saturn v taking off"></div>
+        <div id="hero-image"><img src="/assets/images/command-module.jpeg" alt="A picture of the command module about to enter the earths atmosphere"></div>
     </section>
     <section id="launch">
         <div id="launch-info">
-            <h2>The launch</h2>
-            <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.
-                It was launched from  the Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
-                Armstrong, Buzz Aldrin and MIcheal Collins inside the command module.At 12:22 EDT the engines of 
-                the third stage of the saturn v ignite to lift the command module out of earth orbit sending it 
-                towards the moon.
+            <h2>Return to earth</h2>
+            <p>
+                At 00:56 EDT the vehicle made a burn that removed it from the moons orbit and it went on a return trajectory towards earth.
+                when the command module re entered the earths atmosphere at 12:35 EDT after 3 days of travel it became engulfed by plasma 
+                due to its speed and the atmosphere's thickness, it briefly lost radio contact when this happened. At 12:51 EDT the commang 
+                module lands in the pacific ocean and are picked up by a recovery team. They were sprayed with a disenfectant as a 
+                precaution agains pathogens that might have been on the moon.
             </p>
         </div>
-        <div id="launch-img"> <img src="assets/images/saturn-v-flight.jpg" alt="A picture of the saturn v mid flight"></div>
+        <div id="launch-img"> <img src="assets/images/re-entry-burn.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
     <section id="seperation">
         <div id="seperation-info">
