Add an image and information to the section about the astronauts quarantine

--- a/end.html
+++ b/end.html
@@ -48,14 +48,15 @@
     </section>
     <section id="seperation">
         <div id="seperation-info">
-            <h2>The seperation</h2>
-            <p>At 13:26 EDT Neil Armstrong and Buzz Aldrin entered the Eagle 
-                lunar lander and seperated from Micheal Collins who remained in
-                the command module which was orbiting the moon. After this the 
-                eagle was to descend towards the moon and land on it
+            <h2>The quarantine</h2>
+            <p>
+                The astronauts were collected by a helicopter it dropped them off on the U.S.S Hornet and they were put into a mobile quarantine trailer where
+                they remained until they were at the lunar recieving laborotory in Houston Texas. President Nixon welcomed the astronauts and says to them over 
+                an intercom "This is the greatest week in the history of the world since the Creation…. As a result of what you have done, the world’s never been closer together 
+                . We can reach for the stars just as you have reached so far for the stars."
             </p>
         </div>
-        <div id="seperation-img"><img src="assets/images/eagle-module.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
+        <div id="seperation-img"><img src="assets/images/quarantine-trailer.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
     <section id="landing">
         <div id="landing-info">
