--- a/end.html
+++ b/end.html
@@ -60,22 +60,14 @@
     </section>
     <section id="landing">
         <div id="landing-info">
-            <h2>The landing</h2>
-            <p>When the eagle was descending towards the moon, Neil Armstrong was
-                having difficulty finding a place to land, but luckily he found a 
-                smooth place to land with just 25 seconds of fuel to spare. They 
-                landed on July 20 1969 at 4:18 p.m. EDT.At around 10:40-10:56 p.m. 
-                EDT Neil Armstrong got out of the lunar module hatch and started 
-                going down the nine step ladder. When he was at the second step he pulled a 
-                ring that deployed a tv camera. This camera broadcasted him going down to 
-                the moons surface live to people on earth.At 10:56 p.m. Neil Armstrong takes 
-                his first step on the moon and says his 
-                famous quote "That's one small step for man, one giant leap for mankind.".
-                This moment was the first time in history a man had set foot on a celestial
-                body that was not earth.
+            <h2>End of the mission</h2>
+            <p>
+                After 21 days of the astronauts being quarantined they were deeemed healthy and they were allowed to leave. That was the end of the apollo 11 mission, 
+                the first time man had set foot on a completely foreign celestial body and it lasted around 8 days. It is revered and looked as a moment of triumph 
+                and an example of humanity's greatness. The mission was widely considered successful in nearly every respect.
             </p>
         </div>
-        <div id="landing-img"><img src="assets/images/apollofootprint.jpg" alt="A picture of an astronaut on the moon"></div>
+        <div id="landing-img"><img src="assets/images/celebration.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
     <section id="vid-section">
            <div id="vid">
