--- a/end.html
+++ b/end.html
@@ -16,7 +16,7 @@
         <nav>
             <ul id="nav">
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
                     <a href="end.html">End</a>
