Turn the title into a clickable link that sends you to the index.html page and change colors for nav hover

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1 id="title">Apollo 11 Mission Timeline</h1>
+        <a href="index.html"><h1 id="title">Apollo 11 Mission Timeline</h1></a>
         <nav>
             <ul id="nav">
                 <li>
