--- a/middle.html
+++ b/middle.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1 id="title">Apollo 11 Mission Timeline</h1>
+        <a href="index.html"><h1 id="title">Apollo 11 Mission Timeline</h1></a>
         <nav>
             <ul id="nav">
                 <li>
