Add a font awesome script and replace text links to nasa social media accounts with font awesome icons

--- a/middle.html
+++ b/middle.html
@@ -75,15 +75,18 @@
     <footer>
         <ul>
             <li>
-                <a href="https://www.youtube.com/c/NASA" target="_blank" aria-label="link to nasa's youtube channel, opens in a new tab if clicked">Link to Nasa Youtube Channel</a>
+                <a href="https://www.youtube.com/c/NASA" target="_blank" aria-label="link to nasa's youtube channel, opens in a new tab if clicked" rel="noopener"><i class="fab fa-youtube"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/nasa/" target="_blank" aria-label="link to nasa's instagram, opens in a new tab if clicked">Link to Nasa Instagram</a>
+                <a href="https://www.instagram.com/nasa/" target="_blank" aria-label="link to nasa's instagram, opens in a new tab if clicked" rel="noopener"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/NASA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" aria-label="link to nasa's twitter, opens in a new tab if clicked">Link to Nasa Twitter</a>
+                <a href="https://twitter.com/NASA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" aria-label="link to nasa's twitter, opens in a new tab if clicked" rel="noopener"><i class="fab fa-twitter"></i></a>
             </li>
         </ul>
     </footer>
+
+    <!--font awesome script-->
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-a11y="true"></script>
 </body>
 </html>
