--- a/end.html
+++ b/end.html
@@ -19,7 +19,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="end.html">End</a>
+                    <a href="end.html" class="active">End</a>
                 </li>
                 <li>
                     <a href="middle.html">Middle</a>
