--- a/middle.html
+++ b/middle.html
@@ -22,7 +22,7 @@
                     <a href="end.html">End</a>
                 </li>
                 <li>
-                    <a href="middle.html">Middle</a>
+                    <a href="middle.html" class="active">Middle</a>
                 </li>
                 <li>
                     <a href="index.html" >Beginning</a>
