Add elements for contact page

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,25 @@
         <div id="hero-image"><img src="/assets/images/contact.jpg" alt="A picture of an astronaut on the moon standing next to the lunar lander"></div>
     </section>
     <section id="seperation">
+        <div class="contact-section">
+            <h2>Contact us here</h2>
+            <form>
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" required>
+            </form>
+            <form>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required>
+            </form>
+            <form>
+                <label for="subject">Subject</label>
+                <input type="text" name="subject" id="subject" required>
+            </form>
+            <form>
+                <label for="message">Message</label>
+                <input type="text" name="message" id="message">
+            </form>
+        </div> 
 
     </section>
     <footer>
