--- a/contact.html
+++ b/contact.html
@@ -36,21 +36,21 @@
     <section id="seperation">
         <div class="contact-section">
             <h2>Contact us here</h2>
+            <br>
             <form>
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name" required>
+                <input type="text" name="name" id="name" required placeholder="Enter name here">
             </form>
+            <br>
             <form>
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" required>
+                <input type="email" name="email" id="email" required placeholder="Enter email here">
             </form>
+            <br>
             <form>
-                <label for="subject">Subject</label>
-                <input type="text" name="subject" id="subject" required>
+                <input type="text" name="subject" id="subject" required placeholder="Enter subject here">
             </form>
+            <br>
             <form>
-                <label for="message">Message</label>
-                <input type="text" name="message" id="message">
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter message here"></textarea>
             </form>
         </div> 
 
