Add submit button

--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,10 @@
             <form>
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter message here"></textarea>
             </form>
+            <br>
+            <form>
+                <input type="submit" id="submit">
+            </form>
         </div> 
 
     </section>
