--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <section>
         <div id="hero-image"><img src="/assets/images/contact.jpg" alt="A picture of an astronaut on the moon standing next to the lunar lander"></div>
     </section>
-    <section id="seperation">
+    <section id="contact">
         <div class="contact-section">
             <h2>Contact us here</h2>
             <br>
